--- a/bank.html
+++ b/bank.html
@@ -35,7 +35,7 @@
             <div class="grid grid-cols-2 gap-4 text-white  mx-auto w-9/12">
 				<div class="box p-8 bg-red-700   rounded-xl">
 					<h3 class="text-3xl">Please Deposit</h3>
-                    <input type="text" id="deposit_field"placeholder="$ Please input your Deposit" class="block w-7/12 my-6 text-blue-800 ">
+                    <input type="text" id="deposit-Field"placeholder="$ Please input your Deposit" class="block w-7/12 my-6 text-blue-800 ">
         
             
                     <button class="bg-amber-600 px-6 py-3 hover:bg-amber-900 text-slate-100 font-medium  rounded-md mb-5" id="btn-deposit">Deposit</button>
