--- a/bank.html
+++ b/bank.html
@@ -18,15 +18,15 @@
 			<div class="grid grid-cols-3 gap-4 text-white  mx-auto w-9/12">
 				<div class="box p-8 bg-slate-700   rounded-xl">
 					<h3 class="text-3xl">Deposit</h3>
-					<h2 class="text-5xl" id="deposit-amount">00$</h2>
+					<h2 class="text-5xl" >$<span id="deposit-amount">00</h2>
 				</div>
 				<div class="box p-8 bg-blue-700   rounded-xl">
 					<h3 class="text-3xl">Withdraw</h3>
-					<h2 class="text-5xl"id="withdraw-amount">00$</h2>
+					<h2 class="text-5xl" >$<span id="withdraw-amount">00</h2>
 				</div>
 				<div class="box p-8 bg-sky-700   rounded-xl">
 					<h3 class="text-3xl">Balance</h3>
-					<h2 class="text-5xl" id="Balance-amount">1240$</h2>
+					<h2 class="text-5xl" >$<span id="Balance-amount">1240</h2>
 				</div>
 				
 			</div>			
